# sacumen_pyCloudUpload

./: .gitignore
pyCloudUpload_package/: LICENSE  README.md  setup.cfg
pyCloudUpload_package/src/pyCloudUpload/: __init__.py  exceptions.py  upload.py
pyCloudUpload_package/src/pyCloudUpload_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyCloudUpload_package/tests/: test_unit.py
