[metadata]
name = pyCloudUpload_package
version = 1.0.0
author = Hariprasad Poojary
author_email = haridx.poojary@gmail.com
description = A simple Python package to upload media, document & images to AWS or GCP
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
    repository = 
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    boto3
    google-cloud-storage
    pytest

[options.packages.find]
where = src